--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "challenge11",
+  "name": "bootcamp-gostack-challenge11-gorestaurant-mobile",
   "version": "0.0.1",
   "private": true,
   "scripts": {
